--- a/src/main/java/cz/mefi100feles/jkuuza/app/AppView.form
+++ b/src/main/java/cz/mefi100feles/jkuuza/app/AppView.form
@@ -5,6 +5,9 @@
     <Container class="javax.swing.JPanel" name="jpMainPanel">
       <Properties>
         <Property name="name" type="java.lang.String" value="jpMainPanel" noResource="true"/>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[800, 527]"/>
+        </Property>
       </Properties>
 
       <Layout>
@@ -13,9 +16,8 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="jtpTabbedPane" alignment="0" pref="910" max="32767" attributes="1"/>
-                      <Component id="jpFlashMessages" alignment="0" pref="910" max="32767" attributes="1"/>
-                      <Component id="jlbClearFlashMessages" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="jtpTabbedPane" alignment="0" pref="812" max="32767" attributes="1"/>
+                      <Component id="jpHeaderPanel" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -25,40 +27,78 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jpFlashMessages" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-                  <Component id="jlbClearFlashMessages" min="-2" max="-2" attributes="1"/>
+                  <Component id="jpHeaderPanel" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jtpTabbedPane" pref="478" max="32767" attributes="0"/>
+                  <Component id="jtpTabbedPane" pref="603" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Container class="javax.swing.JPanel" name="jpFlashMessages">
+        <Container class="javax.swing.JPanel" name="jpHeaderPanel">
           <Properties>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="null"/>
             </Property>
-            <Property name="name" type="java.lang.String" value="jpFlashMessages" noResource="true"/>
+            <Property name="name" type="java.lang.String" value="jpHeaderPanel" noResource="true"/>
           </Properties>
 
-          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
-            <Property name="columns" type="int" value="1"/>
-            <Property name="rows" type="int" value="0"/>
-            <Property name="verticalGap" type="int" value="5"/>
+          <Layout>
+            <DimensionLayout dim="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="1" attributes="0">
+                      <Component id="jScrollPane1" pref="783" max="32767" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="jlbClearFlashMessages" min="-2" pref="11" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
+            </DimensionLayout>
+            <DimensionLayout dim="1">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="jlbClearFlashMessages" alignment="1" pref="56" max="32767" attributes="1"/>
+                  <Component id="jScrollPane1" alignment="1" pref="56" max="32767" attributes="1"/>
+              </Group>
+            </DimensionLayout>
           </Layout>
+          <SubComponents>
+            <Container class="javax.swing.JScrollPane" name="jScrollPane1">
+              <Properties>
+                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                  <Border info="null"/>
+                </Property>
+                <Property name="alignmentX" type="float" value="2.0"/>
+                <Property name="name" type="java.lang.String" value="jScrollPane1" noResource="true"/>
+              </Properties>
+
+              <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+              <SubComponents>
+                <Container class="javax.swing.JPanel" name="jpFlashMessages">
+                  <Properties>
+                    <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                      <Border info="null"/>
+                    </Property>
+                    <Property name="name" type="java.lang.String" value="jpFlashMessages" noResource="true"/>
+                  </Properties>
+
+                  <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout">
+                    <Property name="axis" type="int" value="3"/>
+                  </Layout>
+                </Container>
+              </SubComponents>
+            </Container>
+            <Component class="javax.swing.JLabel" name="jlbClearFlashMessages">
+              <Properties>
+                <Property name="font" type="java.awt.Font" resourceKey="jlbClearFlashMessages.font"/>
+                <Property name="text" type="java.lang.String" resourceKey="jlbClearFlashMessages.text"/>
+                <Property name="name" type="java.lang.String" value="jlbClearFlashMessages" noResource="true"/>
+              </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jlbClearFlashMessagesMouseClicked"/>
+              </Events>
+            </Component>
+          </SubComponents>
         </Container>
-        <Component class="javax.swing.JLabel" name="jlbClearFlashMessages">
-          <Properties>
-            <Property name="font" type="java.awt.Font" resourceKey="jlbClearFlashMessages.font"/>
-            <Property name="text" type="java.lang.String" resourceKey="jlbClearFlashMessages.text"/>
-            <Property name="name" type="java.lang.String" value="jlbClearFlashMessages" noResource="true"/>
-          </Properties>
-          <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jlbClearFlashMessagesMouseClicked"/>
-          </Events>
-        </Component>
         <Container class="javax.swing.JTabbedPane" name="jtpTabbedPane">
           <Properties>
             <Property name="name" type="java.lang.String" value="jtpTabbedPane" noResource="true"/>
@@ -162,7 +202,7 @@
                     <DimensionLayout dim="1">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <EmptySpace pref="264" max="32767" attributes="0"/>
+                              <EmptySpace pref="389" max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jbtCrawlerAddUrlsFromFile" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="jbtCrawlerRemoveUrls" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -252,12 +292,12 @@
                   <Layout>
                     <DimensionLayout dim="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jsplpCrawlerConsoleSplitPane" alignment="0" pref="543" max="32767" attributes="0"/>
+                          <Component id="jsplpCrawlerConsoleSplitPane" alignment="0" pref="445" max="32767" attributes="0"/>
                       </Group>
                     </DimensionLayout>
                     <DimensionLayout dim="1">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jsplpCrawlerConsoleSplitPane" alignment="1" pref="353" max="32767" attributes="0"/>
+                          <Component id="jsplpCrawlerConsoleSplitPane" alignment="1" pref="478" max="32767" attributes="0"/>
                       </Group>
                     </DimensionLayout>
                   </Layout>
@@ -324,12 +364,12 @@
                           <Layout>
                             <DimensionLayout dim="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <EmptySpace min="0" pref="543" max="32767" attributes="0"/>
+                                  <EmptySpace min="0" pref="445" max="32767" attributes="0"/>
                               </Group>
                             </DimensionLayout>
                             <DimensionLayout dim="1">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <EmptySpace min="0" pref="147" max="32767" attributes="0"/>
+                                  <EmptySpace min="0" pref="380" max="32767" attributes="0"/>
                               </Group>
                             </DimensionLayout>
                           </Layout>
@@ -411,11 +451,11 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="statusPanelSeparator" alignment="0" pref="934" max="32767" attributes="0"/>
+              <Component id="statusPanelSeparator" alignment="0" pref="836" max="32767" attributes="0"/>
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="statusMessageLabel" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="750" max="32767" attributes="0"/>
+                  <EmptySpace pref="652" max="32767" attributes="0"/>
                   <Component id="progressBar" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="statusAnimationLabel" min="-2" max="-2" attributes="0"/>
@@ -493,6 +533,6 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,52,0,0,3,-90"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,-23,0,0,3,68"/>
   </AuxValues>
 </Form>
