--- a/src/main/java/com/github/mefi/jkuuza/gui/AppView.form
+++ b/src/main/java/com/github/mefi/jkuuza/gui/AppView.form
@@ -880,7 +880,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jtaAnalyzerStep3Description" alignment="0" pref="717" max="32767" attributes="0"/>
@@ -926,8 +926,8 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="jtaAnalyzerStep3Description" min="-2" pref="38" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="jtaAnalyzerStep3Description" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jtfAnalyzerStep3ProductName" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jlbAnalyzerStep3ProductName" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -957,7 +957,7 @@
                       <Component id="jtfAnalyzerStep3ProductParameterValue" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jlbAnalyzerStep3ProductParameterValue" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="94" max="32767" attributes="0"/>
+                  <EmptySpace pref="84" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jlbAnalyzerStep3Url" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jtfAnalyzerStep3Url" alignment="3" min="-2" max="-2" attributes="0"/>
